[package]
name = "rhymessage"
version = "1.3.0"
description = "Implementation of IETF RFC 5322, Internet Message Format"
authors = ["Richard Walters <rwalters@digitalstirling.com>"]
edition = "2018"
license-file = "LICENSE.txt"
readme = "README.md"
categories = ["parser-implementations", "web-programming"]
keywords = ["parser", "rfc5322"]
repository = "https://github.com/rhymu8354/MessageHeaders.git"
exclude = [
    "*.hpp",
    "*.cpp",
    "CMakeLists.txt"
]

[dependencies]
named_tuple = "0.1"
thiserror = "1.0"
